import { testParseOpenAPI } from "./testParseOpenApi";

describe("x-fern-type", () => {
    testParseOpenAPI("x-fern-type", "openapi.yml");
});
